# my_blockchain

./: .gitignore  CMakeLists.txt  block.cpp  block.h  blockchain.cpp  blockchain.h  chain.cpp  chain.h  config.h  connection.cpp  connection.h  ecdsa.cpp  ecdsa.h  example  example.cpp  hash.cpp  hash.h  loader.cpp  loader.h  main.cpp  message.cpp  message.h  message_queue.cpp  message_queue.h  miner.cpp  miner.h  peer.cpp  peer.h  peer_session.cpp  peer_session.h  pubkey.pem  server.cpp  server.h  transaction.cpp  transaction.h
node0/: config.ini
node1/: config.ini
